fixed toolbar alignment

--- a/main.css
+++ b/main.css
@@ -27,16 +27,12 @@ md-sidenav.md-locked-open {
   padding-left: 10px;
 }
 .noozTitle {
-  text-align: center;
-  font-size: 80px;
-  /*padding-left: 8px;*/
-  color: black;
-  font-family: "Courier New", Courier, monospace;
+  margin: 0 auto
   position: absolute;
-  left: 42%;
-
 }
-
+.toolbar-buttons{
+  width: 300px;
+}
 .toolbar {
   float: right;
   padding-top: 68px;
@@ -52,7 +48,7 @@ md-sidenav.md-locked-open {
     color: rgb(49, 46, 46);
     text-transform: none;
     font-weight: 400;
-    min-width:100px;
+    min-width:80px;
 }
 .md-button.left {
     border-radius: 10px 0 0 10px;
